# midi-synth

./: .gitignore  CMakeLists.txt  README
include/: midi-synth.h  midi-synth.hpp
include/midi-synth/: audio.hpp  display.hpp  keyboard.hpp
src/: .main.cpp.swp  audio.cpp  display.cpp  keyboard.cpp  main.cpp  midi.cpp
